--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./src/bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.832.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
