--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-
   frontend:
     labels:
       shipyard.route: '/'
@@ -14,18 +13,6 @@ services:
       - './frontend/public:/app/public'
     ports:
       - '3000:3000'
-
-  postgres:
-    image: 'postgres:13.0-alpine'
-    environment:
-      POSTGRES_PASSWORD: 'obscure-password'
-      POSTGRES_USER: 'obscure-user'
-      POSTGRES_DB: 'app'
-      PGDATA: '/var/lib/postgresql/data/pgdata'
-    volumes:
-      - 'postgres:/var/lib/postgresql/data'
-    ports:
-      - '5432:5432'
 
   backend:
     labels:
@@ -45,6 +32,19 @@ services:
       - '8080:8080'
     volumes:
       - './backend/src:/app/src'
+
+  postgres:
+    image: 'postgres:9.6.20-alpine'
+    restart: always
+    volumes:
+      - 'postgres:/var/lib/postgresql/data'
+    environment:
+      - POSTGRES_DB=app
+      - POSTGRES_USER=obscure-user
+      - POSTGRES_PASSWORD=obscure-password
+      - PGDATA=/var/lib/postgresql/data/pgdata
+    ports:
+      - '5432'
 
 volumes:
   postgres:
